// Copyright 2018 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package pkg.apis.bundle.v1alpha1;

option go_package = "github.com/GoogleCloudPlatform/k8s-cluster-bundle/pkg/apis/bundle/v1alpha1";

import "pkg/apis/bundle/v1alpha1/bundle_common.proto";

// A collection of Overlays that apply to a specific object.
message OverlayCollection {
  repeated Overlay overlays = 1;
}

// Overlay provides functionality for patching Kubernetes objects. This
// relies on the strategic merge patch functionality from kubernetes.
message Overlay {
  // Required. Name provides an identifier for this overlay.
  string name = 1;

  // The Kubernetes GVK for a custom resource that provides the options
  // (parameters) for this Overlay.
  GroupVersionKind custom_resource_key  = 2;

  // Required. The patch itself. A templated YAML that's meant to be applied via
  // strategic-merge-patch.  The patch itself must be specified as a
  // Go-Templatized YAML.
  string template_string = 3;

  // The usage constraint for this overlay.
  OverlayConstraint overlay_constraint = 4;
}

// Whether the overlay is required or optional.
enum OverlayConstraint {
  // Default proto case. Equivalent to required.
  UNKNOWN_PATCH_USAGE  = 0;

  // This overlay must always be applied. If the relevant parameters are not
  // specified, it is an error.
  REQUIRED = 1;

  // Overlays with this type are optional and only applied of all the parameters
  // are supplied.
  OPTIONAL = 2;
}
